Fri Nov 17 20:08:58 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * system.h: ifdef NEED_DECOY_PERMISSIONS, then define the S_I*
        permission masks for USR, GRP, and OTH in terms of the simpler
        OS/2 masks.

Wed Nov 15 15:36:03 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * system.h: ifdef USE_OWN_TCPIP_H, then include "tcpip.h".  Only
        OS/2 does this right now.

Tue Nov 14 18:44:57 1995  Greg A. Woods  <woods@most.weird.com>

	* getdate.c: OK, this one is from SunOS-4.1 yacc and may be more
	portable -- at least it compiles silently here!  ;-)

Mon Nov 13 03:53:45 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * fnmatch.c: conform to 80 column standard (yes, I'm a pedant).

Wed Nov  8 11:10:59 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * system.h (STAT_MACROS): ifdef S_IFMT, then use it as before; but
        if it's not defined, then just do a single mask and assume
        acceptance any of non-zero result.  Norbert, I trust you'll let me
        know if this is unsatisfactory. :-)
        Ifdef HAVE_SYS_UTIME_H, then include <sys/utime.h>.  Only OS/2
        defines this right now.

Wed Nov  8 13:18:51 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* valloc.c: omit malloc declaration (it's already in system.h
	  which is included and conflicts with <stdlib.h> on some
	  systems).

Tue Nov  7 19:38:48 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* system.h (STAT_MACROS_BROKEN): undo previous change, because
	  else all regular files will be identified as links (the mask for
	  links is S_IFREG|S_IFCHR).

Mon Nov  6 19:20:56 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * system.h (STAT_MACROS_BROKEN): in defining the S_IF* macros,
        don't fold to 1 or 0 by first masking with S_IFMT; not all
        systems have that macro, and anyway it's only necessary that we
        return non-zero.

Fri Oct 27 13:43:35 1995  Karl Fogel  <kfogel@floss.cyclic.com>
